# datafool

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/datafool/: database.py  main.py
backend/src/datafool/api/: routes.py
backend/src/datafool/core/: config.py
backend/src/datafool/models/: schemas.py
backend/src/datafool/services/: llm_handler.py  uploader.py
backend/tests/: test_main.py  test_uploader.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  setupTests.ts
frontend/src/components/: ChartRenderer.tsx  DataVisualization.tsx  FileUpload.tsx  QueryInterface.tsx
frontend/src/components/__tests__/: DataVisualization.test.tsx  FileUpload.test.tsx  QueryInterface.test.tsx
frontend/src/definitions/: apiResponses.ts  interfaces.ts  types.ts
